# flappybird

./: .gitignore  CMakeLists.txt  README.md  flappy.cpp  flappy.hpp  main.cpp
